deployment/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: frontend
spec:
  to:
    kind: Service
    name: frontend
    weight: 100
  port:
    targetPort: 8080
